# gdmpv

./: .gitignore  CMakeLists.txt  SConstruct
demo/: control.gd  control.gd.uid  control.tscn  project.godot
src/: mpv_player.cpp  mpv_player.h  register_types.cpp  register_types.h  thumnail_player.cpp  thumnail_player.h
